--- a/web/index.html
+++ b/web/index.html
@@ -30,7 +30,7 @@
   <script>
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "" // Replace by your app api key,
+      apiKey: "AIzaSyArwBHwJ0c0HWenAYql1J8XcBAV0OriXs0", // Replace by your app api key,
       authDomain: "citypulse-e589a.firebaseapp.com",
       projectId: "citypulse-e589a",
       storageBucket: "citypulse-e589a.appspot.com",
